bug: quelques corrections de z-index sur les autocomplete (utilisé pour les types de boitier des composants)
git-svn-id: svn://svn.code.sf.net/p/mediboard/code/trunk@5521 a21d6be2-e512-0410-a060-91f5a2946631

--- a/style/phenx/forms.css
+++ b/style/phenx/forms.css
@@ -314,3 +314,30 @@ button.notext, a.notext {
 .numericField input {
   margin-right: 0;
 }
+
+.control {
+  border: none;
+  background: transparent;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  display: inline; /* IE */
+  display: inline-block;
+  vertical-align: middle;
+  height: auto;
+}
+
+.control * {
+  position: relative;
+}
+
+.control .trigger {
+  cursor: pointer;
+  margin: 2px 1px;
+}
+
+.control input, 
+.control button, 
+.control select {
+  margin: 0;
+}
